[fix] Fix dark mode css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,17 +28,17 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   html {
-    color-scheme: dark;
+    color-scheme: light;
   }
   body {
-    color: white;
-    background: black;
+    color: black;
+    background: white;
   }
 }
 
-// 다크모드 텍스트 안보이는 문제 해결
+/* 다크모드 텍스트 안보이는 문제 해결 */
 /* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
